--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 97 points<br>
+Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 101 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -27,6 +27,7 @@ Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Delivery Boy (Level 2)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
+<li><div class="title">Apprentice Delivery Boy (Level 3)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Apprentice Gardner (Level 1)</div>  <div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
@@ -55,20 +56,20 @@ Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1713 rev-parse
-    649 symbolic-ref
+   1745 rev-parse
+    665 symbolic-ref
     282 diff-index
-    149 diff
+    150 diff
     102 --git-dir=.git
-     56 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     50 st
+     65 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     52 st
      49 checkout
      47 achievements
      40 log
      32 config
      28 lola
+     16 help
      14 add
-     13 help
      12 merge
      11 commit
       8 br
@@ -76,19 +77,19 @@ Git commands sorted by usage:
       7 gc
       7 branch
       6 lol
+      5 stash
       5 fetch
-      4 stash
       4 difftool
       3 status
       3 push
       3 ls-remote
+      3 bundle
       2 whatchanged
       2 show-branch
       2 show
       2 reset
       2 describe
       2 clean
-      2 bundle
       2 blame
       2 bisect
       1 pull
