--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 104 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 105 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -54,16 +54,17 @@ Unlocked 25/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
+<li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1793 rev-parse
-    689 symbolic-ref
+   1813 rev-parse
+    699 symbolic-ref
     282 diff-index
     150 diff
     102 --git-dir=.git
-     76 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     55 st
+     80 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     57 st
      53 checkout
      48 achievements
      40 log
@@ -73,15 +74,15 @@ Git commands sorted by usage:
      14 add
      12 merge
      11 commit
-      8 br
+      9 br
+      7 stash
       7 rebase
       7 gc
       7 branch
-      6 stash
       6 lol
       5 fetch
+      5 difftool
       4 status
-      4 difftool
       3 push
       3 ls-remote
       3 bundle
@@ -93,6 +94,7 @@ Git commands sorted by usage:
       2 clean
       2 blame
       2 bisect
+      1 reflog
       1 pull
       1 ls-files
       1 init
@@ -133,7 +135,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Thug</div><div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
-<li><div class="title">Weaver</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 <li><div class="title">Web Designer</div><div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 </ul></div>
 </body></html>
