--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 110 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 114 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -32,6 +32,7 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Gardner (Level 1)</div>  <div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Apprentice Goldsmith (Level 1)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Goldsmith (Level 2)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
+<li><div class="title">Apprentice Goldsmith (Level 3)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -59,13 +60,13 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1833 rev-parse
-    709 symbolic-ref
+   1837 rev-parse
+    711 symbolic-ref
     282 diff-index
-    150 diff
+    151 diff
     102 --git-dir=.git
      81 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     57 st
+     58 st
      53 checkout
      48 achievements
      40 log
