--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 114 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 118 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -24,6 +24,7 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
+<li><div class="title">Apprentice Chimney Sweeper (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -60,32 +61,33 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1843 rev-parse
-    714 symbolic-ref
+   1918 rev-parse
+    751 symbolic-ref
     282 diff-index
     151 diff
-    102 --git-dir=.git
-     82 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     58 st
-     53 checkout
-     49 achievements
-     40 log
-     32 config
-     29 lola
-     16 help
+    107 --git-dir=.git
+     83 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     61 st
+     55 checkout
+     50 achievements
+     45 log
+     33 config
+     30 lola
+     17 help
      15 add
      12 merge
      12 commit
-      9 br
+     12 br
+      8 gc
       7 stash
       7 rebase
-      7 gc
       7 branch
       6 lol
+      6 fetch
       6 difftool
-      5 fetch
       4 status
       3 push
+      3 pull
       3 ls-remote
       3 bundle
       2 whatchanged
@@ -97,7 +99,6 @@ Git commands sorted by usage:
       2 blame
       2 bisect
       1 reflog
-      1 pull
       1 ls-files
       1 init
       1 --help
