--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 126 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 132 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -50,6 +50,7 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -63,27 +64,27 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1970 rev-parse
-    773 symbolic-ref
+   2167 rev-parse
+    866 symbolic-ref
     282 diff-index
-    151 diff
-    110 --git-dir=.git
-     98 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     65 st
-     56 checkout
+    158 diff
+    122 --git-dir=.git
+    101 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     71 st
+     57 checkout
+     50 log
      50 achievements
-     45 log
      34 config
-     30 lola
-     22 help
+     31 lola
+     29 help
+     17 lol
+     17 commit
      15 add
-     14 commit
      12 merge
      12 br
-      8 stash
+      9 stash
       8 rebase
       8 gc
-      7 lol
       7 difftool
       7 branch
       6 fetch
@@ -95,6 +96,7 @@ Git commands sorted by usage:
       3 bundle
       2 whatchanged
       2 show-branch
+      2 revert
       2 reset
       2 describe
       2 clean
