--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 132 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 135 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -41,6 +41,7 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Hunter (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 9 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -64,28 +65,28 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   2167 rev-parse
-    866 symbolic-ref
+   2535 rev-parse
+   1042 symbolic-ref
     282 diff-index
-    158 diff
-    122 --git-dir=.git
-    101 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-     71 st
-     57 checkout
-     50 log
+    169 diff
+    123 --git-dir=.git
+    118 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+     80 st
+     62 checkout
+     58 log
      50 achievements
+     40 lola
      34 config
-     31 lola
-     29 help
-     17 lol
-     17 commit
-     15 add
+     31 help
+     23 lol
+     21 add
+     19 commit
+     13 stash
+     13 br
+     12 rebase
      12 merge
-     12 br
-      9 stash
-      8 rebase
+     12 difftool
       8 gc
-      7 difftool
       7 branch
       6 fetch
       4 status
