--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 147 points<br>
+Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 155 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -61,33 +61,34 @@ Unlocked 26/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   2761 rev-parse
-   1155 symbolic-ref
+   2827 rev-parse
+   1188 symbolic-ref
     282 diff-index
     174 diff
-    127 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    129 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    127 log
     123 --git-dir=.git
-     84 st
-     63 log
-     62 checkout
+     86 st
+     63 checkout
      50 achievements
      40 lola
      35 config
-     32 help
+     33 help
+     24 commit
      23 lol
-     23 commit
      22 add
-     15 rebase
+     16 rebase
+     16 difftool
      15 br
      14 stash
      12 merge
-     12 difftool
       8 gc
       7 branch
       6 fetch
